# image_analyzer

./: .gitignore  Cargo.toml  README.md
src/: image_identifiers.rs  lib.rs  main.rs  math_utils.rs
src/image_analyzers/: mod.rs
src/image_analyzers/png/: chunk.rs  mod.rs  parse.rs
src/image_analyzers/png/analyze/: idat.rs  ihdr.rs  mod.rs  phys.rs  plte.rs  sbit.rs
src/image_analyzers/png/analyze/idat/: filter.rs  grayscale.rs  indexed.rs  mod.rs  truecolor.rs
src/types/: color.rs  converters.rs  image.rs  mod.rs
