[package]
name = "image_analyzer"
version = "0.1.0"
authors = ["jackson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
log = "0.4.14"
simple_logger = "1.11.0"
minifb = "0.19.3"
flate2 = "1.0.20"